--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -1,19 +1,18 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-      package="com.komamitsu.android.naverjapan.news"
+      package="com.komamitsu.android.naver.topic"
       android:versionCode="1"
       android:versionName="1.0">
     <application android:icon="@drawable/icon" android:label="@string/app_name">
-        <receiver android:label="@string/app_name" android:name=".NaverJapanNewsWidget">
+        <receiver android:label="@string/app_name" android:name=".Widget">
             <intent-filter>
                 <action android:name="android.appwidget.action.APPWIDGET_UPDATE" />
             </intent-filter>
             <meta-data android:name="android.appwidget.provider"
                 android:resource="@xml/widget_word" />
         </receiver>
-        <service android:name=".NaverJapanNewsWidget$UpdateService"/>
+        <service android:name=".Widget$UpdateService"/>
     </application>
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-sdk android:minSdkVersion="7" android:targetSdkVersion="7" />
-
 </manifest> 
